[tool.poetry]
name = "nextgen-s3-backend"
version = "0.1.0"
description = ""
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.39"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
